--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -157,14 +157,14 @@
 @media (max-width: 480px) {
   .navbar {
     padding: 0 0.5rem;
-    height: 70px;
+    height: 65px;
   }
   
   .nav-brand {
-    font-size: 1.2rem;
+    font-size: 1.1rem;
   }
   
   .nav-menu {
-    top: 70px;
+    top: 65px;
   }
 }
